Fix dark mode dan upload aset build

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,20 +1,16 @@
 @import "tailwindcss";
 
+/* --- 1. Paksa Light Mode (Agar HP Dark Mode tetap terang) --- */
 :root {
-  color-scheme: light;
+    color-scheme: light; 
 }
 
-@variant dark (&:where(.dark, .dark *));
-
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
-
+/* --- 2. Konfigurasi Tema (Warna & Font Boss) --- */
 @theme {
     --font-sans: "Instrument Sans", ui-sans-serif, system-ui, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
+    
     --color-primary: #9ac236;
     --color-secondary: #b6c236;
 }
